<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Encryptographer</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="composeNewMessage">Compose New Message</string>
    <string name="compose">Compose</string>
    <string name="phoneNo">Phone Number</string>
    <string name="to">To</string>
    <string name="typeMessage">Type Message...</string>
    <string name="smsMessage">SMS Message</string>
    <string name="smsInbox">Inbox</string>
    <string name="back">Back</string>
    <string name="conversation">Conversation</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_receive">ReceiveActivity</string>
    <string name="title_activity_send_sms">SendSMSActivity</string>
    <string name="title_activity_smsbroadcast_receiver">SMSBroadcastReceiver</string>
    <string name="title_activity_conversation">ConversationActivity</string>
    <string name="contact">  +  </string>
    <string name="toggleEncryption">toggle encryption</string>
    <string name="attach">attach</string>

</resources>
