<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/mainLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.cmpickle.basicsms.SendSMSActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/Widget.AppCompat.ActionBar.Solid">

        <ImageButton
            android:id="@+id/btnInbox"
            android:src="@drawable/ic_arrow_back_white"
            android:background="@color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:onClick="goToInbox"/>

        <TextView
            android:id="@+id/textView"
            android:background="@color/transparent"
            android:textSize="40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/compose"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextPhoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="phone"
            android:hint="@string/to"/>

        <ImageButton
            android:id="@+id/selectContact"
            android:src="@drawable/ic_contacts_white"
            android:background="@color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="0"
            android:text="@string/contact"
            android:onClick="doLaunchContactPicker"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextSMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minLines="1"
            android:gravity="top|start"
            android:layout_weight="3"
            android:hint="@string/typeMessage"
            android:inputType="textMultiLine"/>

        <ImageButton
            android:id="@+id/btnSendSMS"
            android:src="@drawable/ic_send_white"
            android:background="@color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="0"
            android:text="@string/send"/>
    </LinearLayout>

</LinearLayout>

