<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:id="@+id/mainLayout"
android:weightSum="1"
tools:context="com.example.cmpickle.basicsms.ConversationActivity">

<TextView
    android:id="@+id/textView"
    android:text="@string/conversation"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:layout_gravity="center_horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>

<ListView
    android:id="@+id/SMSList"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_margin="5dp"
    android:layout_weight="1">
</ListView>

<EditText
    android:id="@+id/editTextSMS"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minLines="4"
    android:gravity="top|start"
    android:inputType="textMultiLine"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnReceive"
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:onClick="goToReceive"/>

        <Button
            android:id="@+id/btnSendSMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:text="@string/send"/>
    </LinearLayout>

</LinearLayout>
